# AIephant-AI-Gateway

./: .dockerignore  .env.template  .gitignore  AGENTS.md  AGENTS.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md
ai-gateway/: Cargo.toml  build.rs
ai-gateway/config/: alephant-cloud.yaml  load-test.yaml  local-cloud.yaml  local-minimal.yaml  local-observe.yaml  local.yaml
ai-gateway/config/embedded/: mapper-profiles.yaml  model-mapping.yaml  providers.yaml
ai-gateway/examples/: cloud_log_bodies_real_storage.rs
ai-gateway/src/: app.rs  app_redis.rs  app_state.rs  gate_archival.rs  lib.rs  main.rs  session_headers.rs
ai-gateway/src/cli/: helpers.rs
ai-gateway/src/config/: alephant.rs  balance.rs  client_ip_rate_limit.rs  cloudflare_kv.rs  database.rs  deployment_target.rs  discover.rs  dispatcher.rs  fallback_bridge.rs  fallback_policy.rs  gateway_in_flight_limit.rs  mapper_profiles.rs  mod.rs  model_mapping.rs  monitor.rs  policy.rs  providers.rs  redis.rs  request_log.rs  response_headers.rs  retry.rs  router.rs  s3.rs  security_plugin.rs  semantic_cache.rs  server.rs  tikv_kv.rs  validation.rs
ai-gateway/src/content_filter/: client.rs  estimate.rs  evaluate.rs  mod.rs  piicache.rs  prompt_cache.rs  reconnect.rs  request.rs
ai-gateway/src/crypto/: master_key.rs  master_key_config.rs  mod.rs
ai-gateway/src/default_model/: choose.rs  mod.rs  price.rs  resolve.rs
ai-gateway/src/discover/: mod.rs
ai-gateway/src/dispatcher/: anthropic_client.rs  bedrock_client.rs  client.rs  extensions.rs  mod.rs  ollama_client.rs  openai_compatible_client.rs  service.rs
ai-gateway/src/endpoints/: mappings.rs  mod.rs
ai-gateway/src/error/: api.rs  auth.rs  init.rs  internal.rs  invalid_req.rs  logger.rs  mapper.rs  mod.rs  prompts.rs  provider.rs  stream.rs
ai-gateway/src/fallback/: evaluator.rs  mod.rs  observability.rs
ai-gateway/src/llm_kv_cache/: mod.rs
ai-gateway/src/logger/: body_storage.rs  cloud_bodies.rs  first_token.rs  mod.rs  model_info.rs  service.rs  usage_parse.rs
ai-gateway/src/metrics/: attribute_extractor.rs  mod.rs  request_count.rs  rolling_counter.rs  system.rs
ai-gateway/src/middleware/: add_extension.rs  auth.rs  counted_body.rs  mod.rs  response_headers.rs  routing_precheck.rs  security.rs
ai-gateway/src/plugin/: builtins.rs  loader.rs  mod.rs
ai-gateway/src/proto/: evaluate.proto
ai-gateway/src/router/: direct.rs  latency.rs  meta.rs  mod.rs  router_details.rs  service.rs  strategy.rs  target_provider_resolve.rs  unified_api.rs
ai-gateway/src/semantic_cache/: base_url_resolver.rs  embedder_client.rs  embedding_identity.rs  header_policy.rs  key_builder.rs  mod.rs  qdrant_store.rs  service.rs
ai-gateway/src/store/: db_listener.rs  enrichment_redis.rs  enrichment_touch.rs  master_key_cache.rs  mod.rs  router.rs  s3.rs
ai-gateway/src/tests/: harness.rs  mock.rs
ai-gateway/src/types/: body.rs  extensions.rs  logger.rs  mod.rs  model_id.rs  org.rs  provider.rs  rate_limit.rs  response.rs  router.rs  secret.rs  usage_tokens.rs  user.rs
ai-gateway/src/utils/: catch_panic.rs  handle_error.rs  health_check.rs  meltdown.rs  mod.rs  retry.rs  timer.rs  validate_config.rs
ai-gateway/src/virtual_key/: enforce.rs  legacy_key.rs  mod.rs  model_policy.rs
ai-gateway/stubs/alephant/: log_request.json  log_request_body_kafka_shape.sample.json
ai-gateway/stubs/gemini/: generate_content_error.json  generate_content_success.json
ai-gateway/stubs/mistral/: chat_completion.json
ai-gateway/stubs/openai/: chat_completion_internal_error.json
ai-gateway/stubs/s3/: upload_log_body_cloud.json  upload_request.json
ai-gateway/tests/: auth.rs  client_ip_rate_limit.rs  compat_mode.rs  direct_proxy.rs  error_format.rs  fallback_dispatcher_global_retry.rs  fallback_evaluator_semantics.rs  fallback_evaluator_stub.rs  fallback_health_monitor_policy.rs  fallback_observability_logs.rs  fallback_policy_config.rs  fallback_rate_limit_monitor_policy.rs  fallback_retry_bridge.rs  fallback_workspace_balancer_intersection.rs  fallback_workspace_providers_store.rs  gateway_in_flight_limit.rs  health_check.rs  health_monitor.rs  load_balance.rs  logger.rs  mapper_service_vk_policy.rs  policy_piicache_redis.rs  rate_limit_monitor.rs  retries.rs  session_headers.rs  single_provider.rs  unified_api.rs  virtual_key_enforce.rs  virtual_key_model_policy.rs  weighted_balance.rs  workspace_concurrency_redis.rs
crates/alephant-llm-kv-cache/: Cargo.toml
crates/alephant-llm-kv-cache/src/: backend.rs  backoff.rs  bucket.rs  cloudflare.rs  error.rs  internal_stub.rs  key.rs  lazy_cloudflare.rs  lazy_tikv.rs  lib.rs  put_retry.rs  response.rs  settings.rs  tikv.rs  tikv_util.rs  value.rs
crates/alephant-llm-kv-cache/tests/: cf_kv_mock.rs
crates/gateway-e2e-harness/: Cargo.toml  README.md
crates/gateway-e2e-harness/cases/: l1-anthropic-fake-key.json  l1-auth-invalid-bearer-unified.json  l1-auth-missing-bearer-unified.json  l1-health-get.json  l1-health-head.json  l1-unified-forced-routing-fake-key.json  l2-anthropic-chat-nonstream-template.json  l2-anthropic-chat-stream-template.json  l2-bedrock-chat-nonstream-template.json  l2-direct-anthropic-messages-template.json  l2-direct-openai-chat-template.json  l2-gemini-chat-nonstream-template.json  l2-ollama-chat-nonstream-template.json  l2-openai-chat-minimal.json  l2-openai-chat-multimodal-template.json  l2-openai-chat-nonstream-reqid.json  l2-openai-chat-stream-minimal.json  l2-openai-chat-tool-calls.json  l2-unified-bare-model-resolved.json  l2-unified-large-context-truncate-template.json  l2-unified-session-headers-template.json  l4-openai-cache-control-max-age-template.json  l4-openai-llm-kv-t3.json  tc-auth-001-valid-bearer.json  tc-auth-002-missing-bearer.json  tc-auth-003-auth-disabled.json  tc-auth-004-vk-repeat.json  tc-auth-005-no-provider-key.json  tc-auth-006-master-key-upstream.json  tc-auth-007-cold-provider-keys.json  tc-auth-009-unified-no-router.json  tc-auth-010-direct-no-router.json  tc-cfg-001-smoke.json  (+487 more)
crates/no-cjk-rust-comments/: Cargo.toml
(+241 files in other folders)
