[package]
name = "gateway-e2e-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "gateway-e2e-harness"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
tokio = { workspace = true }
regex.workspace = true
